# rust_postgres_connect

./: .gitignore  Cargo.toml
src/: constants.rs  fileuploader.rs  generic_db_connect.rs  main.rs  student.rs
src/utils/: mod.rs
