[package]
name = "Rust_PG"
version = "0.1.0"
edition = "2021"

[dependencies]
#server // used to build the server and routes
axum = "0.7.5"
tokio = { version = "1.38.0", features= ["full"] }

#sql // used to connect to db and create db pool
sqlx = {version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros", "time"]}

#serde // used for serailize response
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
chrono = { version = "0.4" }

#env // env handling
dotenvy = "0.15.7"
