[package]
name = "Rust_PG"
version = "0.1.0"
edition = "2021"

[dependencies]
#server // used to build the server and routes
axum = "0.7.5"
tokio = { version = "1.38.0", features= ["full"] }

#sql // used to connect to db and create db pool
sqlx = {version = "0.7.4", features = ["postgres", "runtime-tokio", "tls-native-tls", "macros", "time"]}

#serde // used for serailize response
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
chrono = { version = "0.4" }

#env // env handling
dotenvy = "0.15.7"
tower-http = {version = "0.5.2", features = ["cors"]}
gbs_db_connect = "0.0.1"
http = "1.1.0"

#server logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

#encryption
aes = "0.7.5"
block-modes = "0.8.1"
hex = "0.4.3"
once_cell = "1.19.0"
